--- a/weather/core/templates/core/home.html
+++ b/weather/core/templates/core/home.html
@@ -2,5 +2,16 @@
 {% load static %}
 {% block title %}Home{% endblock title %}
 {% block content %}
-    <h1>Home Page</h1>
+    <form action="{% url 'home' %}" method="POST">
+        {% csrf_token %}
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="{{form.loc.id_for_label}}">{{form.loc.label}}</span>
+            </div>
+            {{form.loc}}
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-danger">Go</button>
+            </div>
+        </div>
+    </form>
 {% endblock content %}
