--- a/weather/core/templates/core/base.html
+++ b/weather/core/templates/core/base.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    <title>Weather Report : {% block title %}{% endblock title %}</title>
+    <title>Weather Reporter : {% block title %}{% endblock title %}</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock content %}
+    
+    {% include 'core/navbar.html' %}
+    <div class="container-fluid bg-warning">
+        {% block content %}
+        {% endblock content %}
+    </div>
     <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'core/js/popper.js' %}"></script>
     <script src="{% static 'core/js/all.min.js' %}"></script>
