--- a/weather/core/templates/core/base.html
+++ b/weather/core/templates/core/base.html
@@ -15,10 +15,14 @@
 <body>
     
     {% include 'core/navbar.html' %}
+    
     <div class="container-fluid bg-warning">
         {% block content %}
         {% endblock content %}
     </div>
+
+    {% include 'core/footer.html' %}
+
     <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'core/js/popper.js' %}"></script>
     <script src="{% static 'core/js/all.min.js' %}"></script>
