--- a/weather/core/templates/core/navbar.html
+++ b/weather/core/templates/core/navbar.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light shadow-lg">
+<nav class="navbar navbar-expand-lg navbar-light shadow-lg bg-danger">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <span style="font-size: 3.7vh;">
-          <img src="" width="35px" alt="logo">
-          <b>Weather Reporter</b>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <span class="text-white" style="font-size: 3.7vh;">
+            <i class="fas fa-cloud-sun-rain"></i>
+            <b>Weather Reporter</b>
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,11 +11,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link {{home_active}}" aria-current="page" href="{% url 'home' %}"><b>Home</b></a>
+          <li class="nav-item ">
+            <a class="nav-link {{home_active}} {{home_disabled}}" aria-current="page" href="{% url 'home' %}"><b>Home</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{api_active}}" href=""><b>API</b></a>
+            <a class="nav-link {{api_active}} {{api_disabled}}" href=""><b>API</b></a>
           </li>
         </ul>
       </div>
