--- a/weather/core/templates/core/navbar.html
+++ b/weather/core/templates/core/navbar.html
@@ -11,11 +11,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item ">
-            <a class="nav-link {{home_active}} {{home_disabled}}" aria-current="page" href="{% url 'home' %}"><b>Home</b></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link {{api_active}} {{api_disabled}}" href=""><b>API</b></a>
+            <a class="nav-link active disabled" aria-current="page" href="{% url 'home' %}"><b>Home</b></a>
           </li>
         </ul>
       </div>
